--- a/client/modules/core/components/.ignore/style.css
+++ b/client/modules/core/components/.ignore/style.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   font-family: 'Helvetica Neue', Helvetica, 'Segoe UI', Arial, freesans, sans-serif;
   padding: 10px 20px;
 }
@@ -42,4 +42,4 @@ footer {
   margin-top: 20px;
   border-top: 1px solid #eee;
   padding-top: 5px;
-}
+}*/
